[package]
name = "bevy-fps-ui"
description = "Fancy FPS counter for Bevy Game Engine"
authors = ["kamii"]
version = "0.1.2"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kamilkonefke/bevy-fps-ui"
edition = "2021"

[dependencies]
bevy = "0.13.2"

[[example]]
name = "basic-example"
path = "basic.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
